adding carousel css, js, animation, fixing hero banner for landing page

--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Tales & Titles</title>
+		<link rel="icon" 
+	    type="image/png" 
+	    href="./assets/5.jpg">
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-			crossorigin="anonymous"
-		/>
-
-    </script>
+			crossorigin="anonymous"/>
+			<style>
+				@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:ital,wght@1,900&family=Raleway:wght@300&display=swap');
+				</style>
+			<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.theme.default.min.css">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
+			<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="./css/style.css"/>
 	</head>
-	<body>
-		<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tales & Titles</title>
-    
-  </head>
+
   <body>
 	<div id="mainNavigation">
 		<nav role="navigation">
@@ -64,67 +63,138 @@
 		  </header><!-- header role="banner" -->
       <!-- header role="banner" -->
 		<main>
-			<section>
-				<!-- Page Wrap -->
-<div class="page-wrap">
 
-	<div id="home-slider">
-	  <div class="swiper-container">
-		<div class="swiper-wrapper">
-		  <div class="swiper-slide swiper-slide-one">
-			<div class="swiper-image" data-swiper-parallax-y="-20%">
-			  <div class="swiper-image-inner swiper-image-left swiper-image-one">
-				<h1>A <span class="emphasis">Breath</span>. <br><span>Of Fresh Air.</span></h1>
-				<p>Chapter I, page XV</p>
-			  </div>
-			</div>
-			<div class="swiper-image" data-swiper-parallax-y="35%">
-			  <div class="swiper-image-inner swiper-image-right swiper-image-two">
-				<p class="paragraph">
-				  A Prophet sat in the market-place and told the fortunes of all who cared to engage his services. Suddenly there came running up one who told him that his house had been broken into by thieves, and that they had made off with everything they could lay
-				  hands on.
-				</p>
-			  </div>
-			</div>
-		  </div>
-		  <div class="swiper-slide swiper-slide-two">
-			<div class="swiper-image" data-swiper-parallax-y="-20%">
-			  <div class="swiper-image-inner swiper-image-left swiper-image-three">
-				<h1>The <span class="emphasis">Drop</span>. <br><span>Of Eternal life.</span></h1>
-				<p>Chapter II, page VII</p>
-			  </div>
-			</div>
-			<div class="swiper-image" data-swiper-parallax-y="35%">
-			  <div class="swiper-image-inner swiper-image-right swiper-image-four">
-				<p class="paragraph">
-				  A thirsty Crow found a Pitcher with some water in it, but so little was there that, try as she might, she could not reach it with her beak, and it seemed as though she would die of thirst within sight of the remedy.
-				</p>
-			  </div>
-			</div>
-		  </div>
-		  <div class="swiper-slide swiper-slide-three">
-			<div class="swiper-image" data-swiper-parallax-y="-20%">
-			  <div class="swiper-image-inner swiper-image-left swiper-image-five">
-				<h1>A <span class="emphasis">Sense</span>. <br><span>Of Things to Come.</span></h1>
-				<p>Chapter III, page XI</p>
-			  </div>
-			</div>
-			<div class="swiper-image" data-swiper-parallax-y="35%">
-			  <div class="swiper-image-inner swiper-image-right swiper-image-six">
-				<p class="paragraph">
-				  Every man carries Two Bags about with him, one in front and one behind, and both are packed full of faults. The Bag in front contains his neighbours’ faults, the one behind his own. Hence it is that men do not see their own faults, but never fail to see
-				  those of others.
-				</p>
-			  </div>
-			</div>
-		  </div>
-  
+<!-- HERO SECTION -->
+<section class="pt-8 py-lg-0" id="hero">
+
+	<div class="container-xxl">
+	  <div class="row align-items-center min-vh-lg-100">
+		<div class="col-lg order-lg-1 text-center"><img class="img-fluid" src="./assets/image-from-rawpixel-id-12967045-png.png" alt="" /></div>
+		<div class="col-lg mt-5 mt-lg-0">
+		  <h1 class="hero_1">Embark on a literary journey like never before with Tales & Titles.</h1>
+		  <p class="maintext">Whether you're a seasoned bookworm or just stepping into the world of stories, we're here to be your guide. Discover your next favorite read effortlessly, as we unveil a treasure trove of handpicked recommendations tailored just for you. Let the pages of Tales & Titles be the gateway to your next literary escape – your adventure starts here!</p>
+		  <button class="btn btn-success mt-4" <a href="books.html">Get A Reccomendation</a></button>
 		</div>
-		<div class="swiper-pagination"></div>
 	  </div>
 	</div>
-  </div>
-			</section>
+	<!-- end of .container-->
+
+  </section>
+
+  <!-- CAROUSEL SECTION -->
+  <section class="ftco-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<h2 class="carousel_title">New York Times BestSellers</h2>
+			</div>
+			<div class="col-md-12">
+				<div class="featured-carousel owl-carousel">
+					<div class="item">
+						<div class="row justify-content-center">
+							<div class="col-md-11">
+								<div class="testimony-wrap d-md-flex">
+									<div class="img" style="background-image: url(images/person-1.jpg);"></div>
+									<div class="text text-center p-4 py-xl-5 px-xl-5 d-flex align-items-center">
+										<div class="desc w-100">
+											<p class="h3 mb-5">"Incredible services and amazing customer support</p>
+											<div class="pt-4">
+												<p class="name mb-0">&mdash; Joy Smith</p>
+												<span class="position">Project Manager</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="row justify-content-center">
+							<div class="col-md-11">
+								<div class="testimony-wrap d-md-flex">
+									<div class="img" style="background-image: url(images/person-2.jpg);"></div>
+									<div class="text text-center p-4 py-xl-5 px-xl-5 d-flex align-items-center">
+										<div class="desc w-100">
+											<p class="h3 mb-5">"Incredible services and amazing customer support</p>
+											<div class="pt-4">
+												<p class="name mb-0">&mdash; Rony Smith</p>
+												<span class="position">Project Manager</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="row justify-content-center">
+							<div class="col-md-11">
+								<div class="testimony-wrap d-md-flex">
+									<div class="img" style="background-image: url(images/person-3.jpg);"></div>
+									<div class="text text-center p-4 py-xl-5 px-xl-5 d-flex align-items-center">
+										<div class="desc w-100">
+											<p class="h3 mb-5">"Incredible services and amazing customer support</p>
+											<div class="pt-4">
+												<p class="name mb-0">&mdash; John Doe</p>
+												<span class="position">Project Manager</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+			<!-- <section>
+				<div class="slider">
+					<div class="slider-wrapper flex">
+					  <div class="slide flex">
+						<div class="slide-image slider-link prev"><img src="https://goranvrban.com/codepen/img2.jpg"><div class="overlay"></div></div>
+						<div class="slide-content">
+						  <div class="slide-date">30.07.2017.</div>
+						  <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
+						  <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex. </div>
+						  <div class="slide-more">READ MORE</div>
+						</div>  
+					  </div>
+					  <div class="slide flex">
+						<div class="slide-image slider-link next"><img src="https://goranvrban.com/codepen/img3.jpg"><div class="overlay"></div></div>
+						<div class="slide-content">
+						  <div class="slide-date">30.08.2017.</div>
+						  <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
+						  <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex. </div>
+						  <div class="slide-more">READ MORE</div>
+						</div>  
+					  </div>  
+					  <div class="slide flex">
+						<div class="slide-image slider-link next"><img src="https://goranvrban.com/codepen/img5.jpg"><div class="overlay"></div></div>
+						<div class="slide-content">
+						  <div class="slide-date">30.09.2017.</div>
+						  <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
+						  <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex. </div>
+						  <div class="slide-more">READ MORE</div>
+						</div>  
+					  </div>
+						<div class="slide flex">
+						<div class="slide-image slider-link next"><img src="https://goranvrban.com/codepen/img6.jpg"><div class="overlay"></div></div>
+						<div class="slide-content">
+						  <div class="slide-date">30.10.2017.</div>
+						  <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
+						  <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex. </div>
+						  <div class="slide-more">READ MORE</div>
+						</div>  
+					  </div>
+					</div>
+					<div class="arrows">
+					<a href="#" title="Previous" class="arrow slider-link prev"></a>
+					<a href="#" title="Next" class="arrow slider-link next"></a>
+					</div>
+					</div>
+			</section> -->
 			<!-- <section>
 				<div class="input-group input-group-lg">
 					<span class="input-group-text" id="inputGroup-sizing-lg">Large</span>
@@ -184,5 +254,11 @@
 
 		<script src="./js/script.js"></script>
 		<script src="./js/google-api-script.js"></script>
+		<script src="js/jquery.min.js"></script>
+	  <script src="js/popper.js"></script>
+	  <script src="js/bootstrap.min.js"></script>
+	  <script src="js/owl.carousel.min.js"></script>
+	  <script src="js/main.js"></script>
+	</body>
 	</body>
 </html>
