--- a/map.html
+++ b/map.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Tales & Titles</title>
+		<link rel="icon" 
+	    type="image/png" 
+	    href="./assets/5.jpg">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
@@ -70,16 +74,11 @@
 						  <a class="nav-link" href="map.html">Book Stores</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="#">Policy</a>
+							<a class="nav-link" href="about.html">About Us</a>
 						</li>
-						<li class="nav-item dropdown">
-						  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Company
-						  </a>
-						  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<li><a class="dropdown-item" href="#">Blog</a></li>
-							<li><a class="dropdown-item" href="#">About Us</a></li>
-							<li><a class="dropdown-item" href="#">Contact us</a></li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
 						  </ul>
 						</li>
 					  </ul>
