--- a/books.html
+++ b/books.html
@@ -5,9 +5,22 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Tales & Titles</title>
+	<link rel="icon" 
+	type="image/png" 
+	href="./assets/5.jpg">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,900&display=swap');
+			</style>
+			<style>
+				@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,900&family=Raleway:wght@300&display=swap');
+				</style>				
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -39,10 +52,10 @@
 					  <a class="nav-link" href="map.html">Book Stores</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="#">About Us</a>
+					  <a class="nav-link" href="about.html">About Us</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
+						<a class="nav-link" href="contact.html">Contact</a>
 					  </li>
 				  </ul>
 				</div>
@@ -82,17 +95,32 @@
 			</nav>
 		</header> -->
 					<main>
-						<section>
-							<form id="book-search-form" class="input-group input-group-lg">
-								<span class="input-group-text" id="inputGroup-sizing-lg">Search for you favorite
-									books</span>
-								<input type="text" class="form-control" id="search-term"
-									aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"
-									placeholder="Enter book title, author, or genre" />
-								<button class="btn btn-primary" type="submit">Search</button>
+						<section class="hero">
+							<img class="book_image" src="./assets/books-1.png" alt="books stacked">
+							<p class="hero_text1">Are you searching for your next literary adventure?</p>
+							<h1>Discover hidden gems tailored to your taste.
+							</h1>
+							<p class="hero_text2">If you type in a book you like, the website will use its extensive library to assess it and propose other novels and suggested reads.</p>
+				
+							<form method="POST" action="/recommendations">
+								<input type="text" id="enter" name="book" placeholder="Enter book title" class="input" list="book_list" autocomplete="off">
+						<datalist id="book_list"></datalist>
+						<br><br>
+								<input class="search_input" type="submit" value="Get Recommendations" class="btn">
 							</form>
-							<div id="book-results"></div>
+								<div class="container h-100">
+								  <div class="d-flex justify-content-center h-100">
+									<div class="searchbar">
+										<form method="POST" action="/recommendations">
+									  <input class="search_input" type="text" name="book" placeholder="Enter book title" class="input" list="book_list" autocomplete="off">
+									  <datalist id="book_list"></datalist>
+									  <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+									</div>
+								  </div>
+								</div>
+							
 						</section>
+		
 						<section>
 
 
