--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 			<style>
 				@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:ital,wght@1,900&family=Raleway:wght@300&display=swap');
 				</style>
-			<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
-			<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 		<link rel="stylesheet" href="./css/style.css"/>
 	</head>
@@ -53,9 +49,6 @@
 				<li class="nav-item">
 				<a class="nav-link" href="about.html">About Us</a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="contact.html">Contact</a>
-			</li>
 			 </ul>
 			</div>
 		  </div>
@@ -73,7 +66,9 @@
 		<div class="col-lg mt-5 mt-lg-0">
 		  <h1 class="hero_1">Embark on a literary journey like never before with Tales & Titles.</h1>
 		  <p class="maintext">Whether you're a seasoned bookworm or just stepping into the world of stories, we're here to be your guide. Discover your next favorite read effortlessly, as we unveil a treasure trove of handpicked recommendations tailored just for you. Let the pages of Tales & Titles be the gateway to your next literary escape – your adventure starts here!</p>
-		  <button class="btn btn-success mt-4" <a href="books.html">Get A Reccomendation</a></button>
+		  <a href="books.html">
+			<button class="btn btn-success mt-4">Get A Reccomendation</button>
+		  </a>
 		</div>
 	  </div>
 	</div>
@@ -82,71 +77,46 @@
   </section>
 
   <!-- CAROUSEL SECTION -->
-  <section class="ftco-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<h2 class="carousel_title">New York Times BestSellers</h2>
+  <section>
+	<div id="carouselExample" class="carousel slide">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img
+					src=""
+					class="d-block w-100"
+					alt="New York Times Best Seller"
+				/>
 			</div>
-			<div class="col-md-12">
-				<div class="featured-carousel owl-carousel">
-					<div class="item">
-						<div class="row justify-content-center">
-							<div class="col-md-11">
-								<div class="testimony-wrap d-md-flex">
-									<div class="img" style="background-image: url(images/person-1.jpg);"></div>
-									<div class="text text-center p-4 py-xl-5 px-xl-5 d-flex align-items-center">
-										<div class="desc w-100">
-											<p class="h3 mb-5">"Incredible services and amazing customer support</p>
-											<div class="pt-4">
-												<p class="name mb-0">&mdash; Joy Smith</p>
-												<span class="position">Project Manager</span>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="row justify-content-center">
-							<div class="col-md-11">
-								<div class="testimony-wrap d-md-flex">
-									<div class="img" style="background-image: url(images/person-2.jpg);"></div>
-									<div class="text text-center p-4 py-xl-5 px-xl-5 d-flex align-items-center">
-										<div class="desc w-100">
-											<p class="h3 mb-5">"Incredible services and amazing customer support</p>
-											<div class="pt-4">
-												<p class="name mb-0">&mdash; Rony Smith</p>
-												<span class="position">Project Manager</span>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="row justify-content-center">
-							<div class="col-md-11">
-								<div class="testimony-wrap d-md-flex">
-									<div class="img" style="background-image: url(images/person-3.jpg);"></div>
-									<div class="text text-center p-4 py-xl-5 px-xl-5 d-flex align-items-center">
-										<div class="desc w-100">
-											<p class="h3 mb-5">"Incredible services and amazing customer support</p>
-											<div class="pt-4">
-												<p class="name mb-0">&mdash; John Doe</p>
-												<span class="position">Project Manager</span>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="carousel-item">
+				<img src="" class="d-block w-100" alt="New York Times Best
+				Seller"" />
+			</div>
+			<div class="carousel-item">
+				<img src="" class="d-block w-100" alt="New York Times Best
+				Seller"" />
 			</div>
 		</div>
+		<button
+			class="carousel-control-prev"
+			type="button"
+			data-bs-target="#carouselExample"
+			data-bs-slide="prev"
+		>
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</button>
+		<button
+			class="carousel-control-next"
+			type="button"
+			data-bs-target="#carouselExample"
+			data-bs-slide="next"
+		>
+			<!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+			<span class="carousel-control-next-icon" aria-hidden="true"
+				><i class="fas fa-arrow-alt-circle-right your-icon-class"></i
+			></span>
+			<span class="visually-hidden">Next</span>
+		</button>
 	</div>
 </section>
 			<!-- <section>
@@ -254,11 +224,7 @@
 
 		<script src="./js/script.js"></script>
 		<script src="./js/google-api-script.js"></script>
-		<script src="js/jquery.min.js"></script>
-	  <script src="js/popper.js"></script>
-	  <script src="js/bootstrap.min.js"></script>
-	  <script src="js/owl.carousel.min.js"></script>
-	  <script src="js/main.js"></script>
+		<script src="https://code.jquery.com/jquery.js"></script>
 	</body>
 	</body>
 </html>
