changes to about us

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		  <h1 class="hero_1">Embark on a literary journey like never before with Tales & Titles.</h1>
 		  <p class="maintext">Whether you're a seasoned bookworm or just stepping into the world of stories, we're here to be your guide. Discover your next favorite read effortlessly, as we unveil a treasure trove of handpicked recommendations tailored just for you. Let the pages of Tales & Titles be the gateway to your next literary escape – your adventure starts here!</p>
 		  <a href="books.html">
-			<button class="btn btn-success mt-4">Get A Reccomendation</button>
+			<button class="btn btn-success mt-4">Get Recommendations</button>
 		  </a>
 		</div>
 	  </div>
@@ -224,7 +224,6 @@
 
 		<script src="./js/script.js"></script>
 		<script src="./js/google-api-script.js"></script>
-		<script src="https://code.jquery.com/jquery.js"></script>
-	</body>
+		</body>
 	</body>
 </html>
