--- a/map.html
+++ b/map.html
@@ -155,7 +155,48 @@
 				</div>
 			</div>
 		</div>
-
+<!-- footer section -->
+<footer id="centered-footer">
+	<div class="footer-dark">
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-md-3 item">
+						<h3>Services</h3>
+						<ul>
+							<li><a href="#">Web design</a></li>
+							<li><a href="#">Development</a></li>
+							<li><a href="#">Hosting</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-6 col-md-3 item">
+						<h3>About</h3>
+						<ul>
+							<li><a href="#">Company</a></li>
+							<li><a href="#">Team</a></li>
+							<li><a href="#">Careers</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-6 col-md-3 item">
+						<h3>Contact Us</h3>
+						<ul>
+							<li><a href="#">Phone</a></li>
+							<li><a href="#">Email</a></li>
+						</ul>
+					</div>
+					<div class="col-md-6 item text">
+						<h3>Tales & Titles</h3>
+						<p>
+							Embark on a personalized literary journey with Tales and Titles, your trusted companion for tailored book recommendations. Born from a love of storytelling, our online haven connects readers with the perfect read, carefully curated by our team of book enthusiasts. Whether you're a seasoned reader or a novice, let Tales and Titles guide you through the enchanting world of stories, where each tale has its unique title waiting to be explored. Happy reading!
+						</p>
+					</div>
+					<div class="col item social"><a href="https://github.com/najmamusa/Group-Project-1" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+				</div>
+				<p class="copyright">Tales & Titles © 2023</p>
+			</div>
+		</footer>
+	</div>
+</footer>
 		<script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
 		<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.1/mapbox-gl-directions.js"></script>
 		<link
