--- a/books.html
+++ b/books.html
@@ -99,9 +99,9 @@
 							</h1>
 							<p class="hero_text2">If you type in a book you like, the website will use its extensive library to assess it and propose other novels and suggested reads.</p>
 				
-							<form method="POST" action="/recommendations">
-								<input type="text" id="enter" name="book" placeholder="Enter book title" class="input" list="book_list" autocomplete="off">
-						<datalist id="book_list"></datalist>
+							<form id="book-search-form">
+								<input type="text" id="search-term" name="book" placeholder="Enter book title" class="input" list="book-results" autocomplete="off">
+						<datalist id="book-results"></datalist>
 						<br><br>
 							</form>
 								
