--- a/index.html
+++ b/index.html
@@ -1,228 +1,171 @@
 <!DOCTYPE html>
-<html lang=“en”>
-    <head>
-        <meta charset=“UTF-8" />
-        <meta name=“viewport” content=“width=device-width, initial-scale=1.0" />
-        <title>Tales & Titles</title>
-        <link rel=“icon”
-        type=“image/png”
-        href=“./assets/5.jpg”>
-        <link
-            href=“https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css”
-            rel=“stylesheet”
-            integrity=“sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN”
-            crossorigin=“anonymous”/>
-            <style>
-                @import url(‘https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:ital,wght@1,900&family=Raleway:wght@300&display=swap’);
-                </style>
-    <link rel=“stylesheet” href=“https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css”>
-        <link rel=“stylesheet” href=“./css/style.css”/>
-    </head>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Tales & Titles</title>
+		<link rel="icon" 
+	    type="image/png" 
+	    href="./assets/5.jpg">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous"/>
+			<style>
+				@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Playfair+Display:ital,wght@1,900&family=Raleway:wght@300&display=swap');
+				</style>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+		<link rel="stylesheet" href="./css/style.css"/>
+	</head>
 
   <body>
-    <div id=“mainNavigation”>
-        <nav role=“navigation”>
-          <div class=“py-3 text-center border-bottom”>
+	<div id="mainNavigation">
+		<nav role="navigation">
+		  <div class="py-3 text-center border-bottom">
         <img
-          src=“./assets/5.jpg”
-          width=“300"
-          alt=“Logo”
-          class=“invert”
+          src="./assets/5.jpg"
+          width="300"
+          alt="Logo" 
+		  class="invert"
         />
-        <div class=“navbar-expand-md”>
-            <div class=“navbar-dark text-center my-2">
-              <button class=“navbar-toggler w-75” type=“button” data-bs-toggle=“collapse” data-bs-target=“#navbarNavDropdown” aria-controls=“navbarNavDropdown” aria-expanded=“false” aria-label=“Toggle navigation”>
-                <span class=“navbar-toggler-icon”></span> <span class=“align-middle”>Menu</span>
-              </button>
-            </div>
-            <div class=“text-center mt-3 collapse navbar-collapse” id=“navbarNavDropdown”>
-              <ul class=“navbar-nav mx-auto “>
-                <li class=“nav-item”>
-                  <a class=“nav-link active” aria-current=“page” href=“index.html”>Home</a>
-                </li>
-                <li class=“nav-item”>
-                  <a class=“nav-link” href=“books.html”>Books</a>
-                </li>
-                <li class=“nav-item”>
-                  <a class=“nav-link” href=“map.html”>Book Stores</a>
-                </li>
-                <li class=“nav-item”>
-                <a class=“nav-link” href=“about.html”>About Us</a>
-            </li>
-             </ul>
-            </div>
-          </div>
-        </div>
-          </header><!-- header role=“banner” -->
-      <!-- header role=“banner” -->
-        <main>
+		<div class="navbar-expand-md">
+			<div class="navbar-dark text-center my-2">
+			  <button class="navbar-toggler w-75" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span> <span class="align-middle">Menu</span>
+			  </button>
+			</div>
+			<div class="text-center mt-3 collapse navbar-collapse" id="navbarNavDropdown">
+			  <ul class="navbar-nav mx-auto ">
+				<li class="nav-item">
+				  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="books.html">Books</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="map.html">Book Stores</a>
+				</li>
+				<li class="nav-item">
+				<a class="nav-link" href="about.html">About Us</a>
+			</li>
+			 </ul>
+			</div>
+		  </div>
+		</div>
+		  </header><!-- header role="banner" -->
+      <!-- header role="banner" -->
+		<main>
 
 <!-- HERO SECTION -->
-<section class=“pt-8 py-lg-0" id=“hero”>
+<section class="pt-8 py-lg-0" id="hero">
 
-    <div class=“container-xxl”>
-      <div class=“row align-items-center min-vh-lg-100”>
-        <div class=“col-lg order-lg-1 text-center”><img class=“img-fluid” src=“./assets/image-from-rawpixel-id-12967045-png.png” alt=“” /></div>
-        <div class=“col-lg mt-5 mt-lg-0">
-          <h1 class=“hero_1”>Embark on a literary journey like never before with Tales & Titles.</h1>
-          <p class=“maintext”>Whether you’re a seasoned bookworm or just stepping into the world of stories, we’re here to be your guide. Discover your next favorite read effortlessly, as we unveil a treasure trove of handpicked recommendations tailored just for you. Let the pages of Tales & Titles be the gateway to your next literary escape – your adventure starts here!</p>
-          <a href=“books.html”>
-            <button class=“btn btn-success mt-4">Get Recommendations</button>
-          </a>
-        </div>
-      </div>
-    </div>
-    <!-- end of .container-->
+	<div class="container-xxl">
+	  <div class="row align-items-center min-vh-lg-100">
+		<div class="col-lg order-lg-1 text-center"><img class="img-fluid" src="./assets/image-from-rawpixel-id-12967045-png.png" alt="" /></div>
+		<div class="col-lg mt-5 mt-lg-0">
+		  <h1 class="hero_1">Embark on a literary journey like never before with Tales & Titles.</h1>
+		  <p class="maintext">Whether you're a seasoned bookworm or just stepping into the world of stories, we're here to be your guide. Discover your next favorite read effortlessly, as we unveil a treasure trove of handpicked recommendations tailored just for you. Let the pages of Tales & Titles be the gateway to your next literary escape – your adventure starts here!</p>
+		  <a href="books.html">
+			<button class="btn btn-success mt-4">Get Recommendations</button>
+		  </a>
+		</div>
+	  </div>
+	</div>
+	<!-- end of .container-->
 
   </section>
 
   <!-- CAROUSEL SECTION -->
   <section>
-    <div id=“carouselExample” class=“carousel slide”>
-        <div class=“carousel-inner”>
-            <div class=“carousel-item active”>
-                <img
-                    src=“”
-                    class=“d-block w-100"
-                    alt=“New York Times Best Seller”
-                />
-            </div>
-            <div class=“carousel-item”>
-                <img src=“” class=“d-block w-100" alt=“New York Times Best
-                Seller”" />
-            </div>
-            <div class=“carousel-item”>
-                <img src=“” class=“d-block w-100” alt=“New York Times Best
-                Seller”" />
-            </div>
-        </div>
-        <button
-            class=“carousel-control-prev”
-            type=“button”
-            data-bs-target=“#carouselExample”
-            data-bs-slide=“prev”
-        >
-            <span class=“carousel-control-prev-icon” aria-hidden=“true”></span>
-            <span class=“visually-hidden”>Previous</span>
-        </button>
-        <button
-            class=“carousel-control-next”
-            type=“button”
-            data-bs-target=“#carouselExample”
-            data-bs-slide=“next”
-        >
-            <!-- <span class=“carousel-control-next-icon” aria-hidden=“true”></span> -->
-            <span class=“carousel-control-next-icon” aria-hidden=“true”
-                ><i class=“fas fa-arrow-alt-circle-right your-icon-class”></i
-            ></span>
-            <span class=“visually-hidden”>Next</span>
-        </button>
-    </div>
+	<div id="carouselExample" class="carousel slide">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img
+					src=""
+					class="d-block w-100"
+					alt="New York Times Best Seller"
+				/>
+			</div>
+			<div class="carousel-item">
+				<img src="" class="d-block w-100" alt="New York Times Best
+				Seller"" />
+			</div>
+			<div class="carousel-item">
+				<img src="" class="d-block w-100" alt="New York Times Best
+				Seller"" />
+			</div>
+		</div>
+		<button
+			class="carousel-control-prev"
+			type="button"
+			data-bs-target="#carouselExample"
+			data-bs-slide="prev"
+		>
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</button>
+		<button
+			class="carousel-control-next"
+			type="button"
+			data-bs-target="#carouselExample"
+			data-bs-slide="next"
+		>
+			<!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+			<span class="carousel-control-next-icon" aria-hidden="true"
+				><i class="fas fa-arrow-alt-circle-right your-icon-class"></i
+			></span>
+			<span class="visually-hidden">Next</span>
+		</button>
+	</div>
 </section>
-            <!-- <section>
-                <div class=“slider”>
-                    <div class=“slider-wrapper flex”>
-                      <div class=“slide flex”>
-                        <div class=“slide-image slider-link prev”><img src=“https://goranvrban.com/codepen/img2.jpg”><div class=“overlay”></div></div>
-                        <div class=“slide-content”>
-                          <div class=“slide-date”>30.07.2017.</div>
-                          <div class=“slide-title”>LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
-                          <div class=“slide-text”>Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex. </div>
-                          <div class=“slide-more”>READ MORE</div>
-                        </div>
-                      </div>
-                      <div class=“slide flex”>
-                        <div class=“slide-image slider-link next”><img src=“https://goranvrban.com/codepen/img3.jpg”><div class=“overlay”></div></div>
-                        <div class=“slide-content”>
-                          <div class=“slide-date”>30.08.2017.</div>
-                          <div class=“slide-title”>LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
-                          <div class=“slide-text”>Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex. </div>
-                          <div class=“slide-more”>READ MORE</div>
-                        </div>
-                      </div>
-                      <div class=“slide flex”>
-                        <div class=“slide-image slider-link next”><img src=“https://goranvrban.com/codepen/img5.jpg”><div class=“overlay”></div></div>
-                        <div class=“slide-content”>
-                          <div class=“slide-date”>30.09.2017.</div>
-                          <div class=“slide-title”>LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
-                          <div class=“slide-text”>Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex. </div>
-                          <div class=“slide-more”>READ MORE</div>
-                        </div>
-                      </div>
-                        <div class=“slide flex”>
-                        <div class=“slide-image slider-link next”><img src=“https://goranvrban.com/codepen/img6.jpg”><div class=“overlay”></div></div>
-                        <div class=“slide-content”>
-                          <div class=“slide-date”>30.10.2017.</div>
-                          <div class=“slide-title”>LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
-                          <div class=“slide-text”>Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum laoreet, per rebum omittam ex. </div>
-                          <div class=“slide-more”>READ MORE</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class=“arrows”>
-                    <a href=“#” title=“Previous” class=“arrow slider-link prev”></a>
-                    <a href=“#” title=“Next” class=“arrow slider-link next”></a>
-                    </div>
-                    </div>
-            </section> -->
-            <!-- <section>
-                <div class=“input-group input-group-lg”>
-                    <span class=“input-group-text” id=“inputGroup-sizing-lg”>Large</span>
-                    <input
-                        type=“text”
-                        class=“form-control”
-                        aria-label=“Sizing example input”
-                        aria-describedby=“inputGroup-sizing-lg”
-                    />
-                </div>
-            </section> -->
-        </main>
-        <!-- footer section -->
-        <footer id=“centered-footer”>
-            <div class=“footer-dark”>
-                <footer>
-                    <div class=“container”>
-                        <div class=“row”>
-                            <div class=“col-sm-6 col-md-3 item”>
-                                <h3>Services</h3>
-                                <ul>
-                                    <li><a href=“#”>Web design</a></li>
-                                    <li><a href=“#”>Development</a></li>
-                                    <li><a href=“#”>Hosting</a></li>
-                                </ul>
-                            </div>
-                            <div class=“col-sm-6 col-md-3 item”>
-                                <h3>About</h3>
-                                <ul>
-                                    <li><a href=“#”>Company</a></li>
-                                    <li><a href=“#”>Team</a></li>
-                                    <li><a href=“#”>Careers</a></li>
-                                </ul>
-                            </div>
-                            <div class=“col-md-6 item text”>
-                                <h3>Tales & Titles</h3>
-                                <p>
-                                    Embark on a personalized literary journey with Tales and Titles, your trusted companion for tailored book recommendations. Born from a love of storytelling, our online haven connects readers with the perfect read, carefully curated by our team of book enthusiasts. Whether you’re a seasoned reader or a novice, let Tales and Titles guide you through the enchanting world of stories, where each tale has its unique title waiting to be explored. Happy reading!
-                                </p>
-                            </div>
-                            <div class=“col item social”><a href=“https://github.com/najmamusa/Group-Project-1” target=“_blank”><i class=“fa-brands fa-github”></i></a></div>
-                        </div>
-                        <p class=“copyright”>Tales & Titles © 2023</p>
-                    </div>
-                </footer>
-            </div>
+			
+		</main>
+		<!-- footer section -->
+		<footer id="centered-footer">
+			<div class="footer-dark">
+				<footer>
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-6 col-md-3 item">
+								<h3>Services</h3>
+								<ul>
+									<li><a href="#">Web design</a></li>
+									<li><a href="#">Development</a></li>
+									<li><a href="#">Hosting</a></li>
+								</ul>
+							</div>
+							<div class="col-sm-6 col-md-3 item">
+								<h3>About</h3>
+								<ul>
+									<li><a href="#">Company</a></li>
+									<li><a href="#">Team</a></li>
+									<li><a href="#">Careers</a></li>
+								</ul>
+							</div>
+							<div class="col-md-6 item text">
+								<h3>Tales & Titles</h3>
+								<p>
+									Embark on a personalized literary journey with Tales and Titles, your trusted companion for tailored book recommendations. Born from a love of storytelling, our online haven connects readers with the perfect read, carefully curated by our team of book enthusiasts. Whether you're a seasoned reader or a novice, let Tales and Titles guide you through the enchanting world of stories, where each tale has its unique title waiting to be explored. Happy reading!
+								</p>
+							</div>
+							<div class="col item social"><a href="https://github.com/najmamusa/Group-Project-1" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+						</div>
+						<p class="copyright">Tales & Titles © 2023</p>
+					</div>
+				</footer>
+			</div>
         </footer>
     </div>
-    <script src=“https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js”></script>
-    <script src=“https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js”></script>
-    <script
-            src=“https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js”
-            integrity=“sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ”
-            crossorigin=“anonymous”
-        ></script>
-        <script src=“https://code.jquery.com/jquery.js”></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+	<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+			integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+			crossorigin="anonymous"
+		></script>
+		<script src="https://code.jquery.com/jquery.js"></script>
 
-        <script src=“./js/script.js”></script>
-        <script src=“./js/google-api-script.js”></script>
-        </body>
+		<script src="./js/script.js"></script>
+		</body>
 </html>
