--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
           <button class="btn btn-default btn-lg">Get in Touch</button>
         </div>
         <div class="col-sm-4">
-          <img class="book-2" src="./assets/E3A2EA83-3DB1-4B40-BC5F-8368EE5751B1.PNG" alt="books stacked">
+          <img class="book-2" src="./assets/E3A2EA83-3DB1-4B40-BC5F-8368EE5751B1 (3).png" alt="books stacked">
         </div>
       </div>
     </div>
