--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
 			<div class="carousel-item active">
 				<img
 					src=""
-					class="d-block w-100"
+					class="d-block"
 					alt="New York Times Best Seller"
 				/>
 			</div>
 			<div class="carousel-item">
-				<img src="" class="d-block w-100" alt="New York Times Best
+				<img src="" class="d-block" alt="New York Times Best
 				Seller"" />
 			</div>
 			<div class="carousel-item">
-				<img src="" class="d-block w-100" alt="New York Times Best
+				<img src="" class="d-block" alt="New York Times Best
 				Seller"" />
 			</div>
 		</div>
